<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity">

    <!--android:layout_centerInParent="true"-->

    <RelativeLayout
        android:id="@+id/loginLayout"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/login_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center_horizontal"
            android:text="Account Login"
            android:textColor="#F44336"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <RelativeLayout
            android:id="@+id/relLogininArea"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="60dp"
            android:background="#fff"
            android:layout_below="@id/login_title"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="15dp">


                <TextView
                    android:labelFor="@id/edit_text_email"
                    android:text="email"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:id="@+id/edit_text_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:singleLine="true"
                    android:layout_marginBottom="10dp"
                    android:hint="john@gmail.com"
                    android:inputType="textEmailAddress"/>

                <TextView
                    android:labelFor="@id/edit_text_password"
                    android:text="password"
                    android:fontFamily="sans-serif-light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <EditText
                    android:drawablePadding="10dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:id="@+id/edit_text_password"
                    android:drawableLeft="@drawable/ic_lock"
                    android:hint="Password"
                    android:inputType="textPassword"/>


                <TextView
                    android:id="@+id/text_view_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:paddingTop="5dp"
                    android:text="Forgot Password?"/>


                <Button
                    android:id="@+id/button_sign_in"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:background="#d67601"
                    android:text="Log in"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/text_view_register"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:paddingTop="5dp"
                    android:text="@string/textRegister_signup"/>

            </LinearLayout>


        </RelativeLayout>

        <ImageButton
            android:id="@+id/user_profile_photo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@+id/login_title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/user_profile_image_background"
            android:elevation="4dp"
            android:src="@drawable/ic_boy"/>

        <RelativeLayout
            android:layout_below="@id/relLogininArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:elevation="4dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="5dp">

                <Button
                    android:id="@+id/butLoginGoogle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/login_with_google"
                    android:background="#D9DBD1"
                    android:drawableStart="@drawable/ic_google_logo"
                    android:drawableLeft="@drawable/ic_google_logo" />

                <Button
                    android:id="@+id/butLoginFacebook"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/login_with_facebook"
                    android:background="#D9DBD1"
                    android:drawableStart="@drawable/ic_facebook_logo"
                    android:drawableLeft="@drawable/ic_facebook_logo" />

            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</RelativeLayout>